fix: Remove horisontal scrollbar from jumbotron

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -157,7 +157,8 @@ footer {
   background-color: #12110D;
   color: white;
   height: 72vh;
-  overflow: auto;
+  overflow-y: auto;
+  overflow-x: hidden;
 }
 
 .content-list-container {
